<resources>
    <string name="app_name">Service Novigrad</string>
    <string name="logout_button">LOGOUT</string>
    <string name="welcome_main">Welcome</string>
    <string name="welcome">Welcome User</string>
    <string name="account_login">Account Login</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone# ex.111-111-1111</string>
    <string name="reenter_password_hint">Re-enter Password</string>
    <string name="name_hint">Name</string>
    <string name="radio_customer">Customer</string>
    <string name="radio_employee">Employee</string>
    <string name="account_reg">Account Registration</string>
    <string name="add_service_button">Add Service</string>
    <string name="edit_service_button">Edit Service</string>
    <string name="remove_service_button">Remove Service</string>
    <string name="add_service">Add Service</string>
    <string name="edit_service">Edit Service</string>
    <string name="remove_service">Remove Service</string>
    <string name="add_service_name">Please enter a Service Name</string>
    <string name="add_service_price">Please enter a Price (CAD$)</string>
    <string name="add_service_doc">Please enter the required document(s)</string>
    <string name="add_service_form">Please enter the form(s)</string>
    <string name="separate_by_comma">(separate by commas)</string>
    <string name="edit_hours_button">Edit Branch Hours</string>
    <string name="view__request_button">Service Requests</string>
    <string name="add_branch_service">Add Branch Service</string>
    <string name="remove_branch_service">Remove Branch Service</string>
    <string name="employee_hours">Edit Branch Hours</string>
    <string name="monday_hours">Monday:</string>
    <string name="tuesday_hours">Tuesday:</string>
    <string name="wednesday_hours">Wednesday:</string>
    <string name="thursday_hours">Thursday:</string>
    <string name="friday_hours">Friday:</string>
    <string name="saturday_hours">Saturday:</string>
    <string name="sunday_hours">Sunday:</string>
    <string name="start_time_hint">Enter start time</string>
    <string name="end_time_hint">Enter end time</string>
    <string name="complete">Complete</string>
    <string name="save_branch_hours_button">Save Branch Hours</string>
    <string name="search_branch_button">Search Branches</string>
    <string name="search_sn_branches">Search Service Novigrad Branches</string>
    <string name="address">Address</string>
    <string name="working_hours">Working Hours</string>
    <string name="types_of_services">Service Type(s)</string>
    <string name="search_address_hint">Enter an address</string>
    <string name="service_requests">Service Requests</string>
    <string name="search_service_hint">Enter service type(s)</string>
    <string name="weekday">Select a day of the week</string>
    <string name="weekday_hint">Choose a day</string>
    <string name="day_of_week_hint">Enter a day of the week (i.e. monday, tuesday, etc.)</string>
    <string name="sort_open_inc">Sort by opening hours in increasing order</string>
    <string name="sort_open_dec">Sort by opening hours in decreasing order</string>
    <string name="sort_close_inc">Sort by closing hours in increasing order</string>
    <string name="sort_close_dec">Sort by closing hours in decreasing order</string>
    <string name="postal_code_hint">Enter a postal code (e.g. A1A 1A1)</string>
    <string name="city">City</string>
    <string name="city_hint">Enter a city (e.g. Ottawa)</string>
    <string name="postal_code">Postal Code</string>
    <string name="title_activity_scustomersearchbranch">scustomersearchbranch</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>