<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".CustomerSearchBranches">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:id="@+id/searchSNBranches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/search_sn_branches"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:id="@+id/textViewOpenInc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sort_open_inc"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/openIncreasing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/day_of_week_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewOpenDec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sort_open_dec"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/openDecreasing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/day_of_week_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewCloseInc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sort_close_inc"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/closeIncreasing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/day_of_week_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewCloseDec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sort_close_dec"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/closeDecreasing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/day_of_week_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/searchCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/city"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/city_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/searchServiceType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/types_of_services"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/search_service_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/searchPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/postal_code"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/postalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/postal_code_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/searchBranchesActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/search_branch_button" />

        <ListView
            android:id="@+id/listViewBranches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>
</RelativeLayout>