<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadeScrollbars="false"
    android:scrollbarAlwaysDrawVerticalTrack="true" >



<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <TextView
            android:id="@+id/rtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="85dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <TextView
            android:id="@+id/rtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/account_reg"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <EditText
            android:id="@+id/rname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/remail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/rpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/rpassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/reenter_password_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/employeeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="vertical">

            <EditText
                android:id="@+id/rphoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="phone" />

            <EditText
                android:id="@+id/rstreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="Street Number and Name"
                android:inputType="text" />

            <EditText
                android:id="@+id/rcity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="City"
                android:inputType="text" />

            <Spinner
                android:id="@+id/rprovince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="Select a Province"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <EditText
                android:id="@+id/rpostalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="Postal Code ex.A1A 1A1"
                android:inputType="text" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <RadioGroup
            android:id="@+id/rradiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rcustomerbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCustomerButtonClicked"
                android:text="@string/radio_customer" />

            <RadioButton
                android:id="@+id/remployeebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onEmployeeButtonClicked"
                android:text="@string/radio_employee" />
        </RadioGroup>

        <ProgressBar
            android:id="@+id/rprogressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="184dp"
            android:layout_marginEnd="184dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/rregisterbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="98dp"
            android:layout_marginEnd="98dp"
            android:gravity="center"
            android:onClick="onRegisterButtonClicked"
            android:text="@string/register_button" />

    </LinearLayout>

</RelativeLayout>
</ScrollView>