<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".AdminAddService">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add_service"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/editServiceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/add_service_name"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <EditText
            android:id="@+id/editServicePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/add_service_price"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <EditText
            android:id="@+id/editServiceForms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/add_service_form"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/separatebycommas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/separate_by_comma" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/editServiceDocs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/add_service_doc"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/separatebycommas2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/separate_by_comma" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Complete" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>
</RelativeLayout>