<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <TextView
            android:id="@+id/mtitle"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="93dp"
            android:layout_marginEnd="93dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="43dp" />

        <TextView
            android:id="@+id/ltitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/welcome_main"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="211dp" />

        <Button
            android:id="@+id/mlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:gravity="center"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/mregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:gravity="center"
            android:text="@string/register_button" />
    </LinearLayout>

</RelativeLayout>
